tests/baselines/reference/exportAssignmentTopLevelEnumdule.errors.txt
foo_0.ts(4,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== foo_1.ts (0 errors) ====
    import foo = require("./foo_0");
    var color: foo;
    if(color === foo.green){
    	color = foo.answer;
    }
    
==== foo_0.ts (1 errors) ====
    enum foo {
    	red, green, blue
    }
    module foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export var answer = 42;
    }
    export = foo;
    